Added some unit tests

--- a/JsonQL.Tests/JsonQL.Tests.csproj
+++ b/JsonQL.Tests/JsonQL.Tests.csproj
@@ -168,9 +168,15 @@
 		<None Remove="Operators\TypeOfOperator\ExpectedCompiledJson.json" />
 		<None Remove="Operators\TypeOfOperator\JsonFile1.json" />
 		<None Remove="Operators\TypeOfOperator\JsonFile2.json" />
-		<None Remove="QueryManager\ResultAsObject\Data\JsonFile1.json" />
-		<None Remove="QueryManager\ResultAsObject\Data\JsonFile2.json" />
-		<None Remove="QueryManager\ResultAsObject\ExpectedResults\RECONSIDER_QueryCollectionOf_Nullable_ValueTypeValues_Array_Test_ExpectedResult.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\CollectionsOfCollections.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile1.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile2.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Deserializing_Class_And_Interface_Property_Types_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Deserializing_Class_With_Both_Interface_And_Class_Properties_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_For_Interface_Instance_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_For_ReferenceType_Implementation_Instance_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_Json_InParent_Json_File_Test - Copy.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_Json_InParent_Json_File_Test.json" />
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\Data\JsonFile1.json" />
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableReferenceItems\Data\JsonFile1.json" />
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\Data\JsonFile1.json" />
@@ -179,7 +185,6 @@
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_IReadOnlyList_of_ReferenceType_Items_Test.json" />
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_List_of_ReferenceType_Items_Test.json" />
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\Data\JsonFile1.json" />
-		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\Data\JsonFile1_DELETE.json" />
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_Array_Of_ValueType_Items_Test.json" />
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_IEnumerable_Of_ValueType_Items_Test.json" />
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_IReadOnlyList_Of_ValueType_Items_Test.json" />
@@ -192,6 +197,18 @@
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_IEnumerable_Of_ValueType_Items_Test.json" />
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_IReadOnlyList_Of_ValueType_Items_Test.json" />
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_List_Of_ValueType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Collections_of_Collections_of_Collections_With_First_Level_Items_Nullable_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Collections_of_Collections_of_Collections_With_Second_Level_Items_Nullable_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Collections_of_Collections_of_Collections_With_Third_Level_Items_Nullable_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Non_Nullable_Collections_of_Collections_of_Collections_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Non_Nullable_ReferenceType_Value_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Non_Nullable_Value_Type_Value_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Nullable_Collections_of_Collections_of_Collections_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Nullable_Collections_With_Nullable_Collection_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Nullable_ReferenceType_Value_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Nullable_Value_Type_Value_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Reference_Type_Value_With_Null_Value_of_Nullable_Property_of_Nullable_Value_Type.json" />
+		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Reference_Type_Value_With_Null_Value_of_Nullable_Property_of_Reference_Type.json" />
 		<None Remove="QueryManager\ResultAsParsedJsonValue\JsonFile1.json" />
 		<None Remove="QueryManager\ResultAsParsedJsonValue\JsonFile2.json" />
 		<None Remove="QueryManager\ResultAsParsedJsonValue\QueryListOfReferenceTypeValuesTestExpectedResult.json" />
@@ -370,9 +387,26 @@
 		<EmbeddedResource Include="Operators\TypeOfOperator\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="Operators\TypeOfOperator\JsonFile1.json" />
 		<EmbeddedResource Include="Operators\TypeOfOperator\JsonFile2.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsObject\Data\JsonFile1.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsObject\Data\JsonFile2.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsObject\ExpectedResults\RECONSIDER_QueryCollectionOf_Nullable_ValueTypeValues_Array_Test_ExpectedResult.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile1.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\CollectionsOfCollections.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile2.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_Json_InParent_Json_File_Test - Copy.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Collections_of_Collections_of_Collections_With_Third_Level_Items_Nullable_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Collections_of_Collections_of_Collections_With_Second_Level_Items_Nullable_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Collections_of_Collections_of_Collections_With_First_Level_Items_Nullable_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Nullable_Collections_With_Nullable_Collection_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Nullable_Collections_of_Collections_of_Collections_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Non_Nullable_Collections_of_Collections_of_Collections_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Nullable_ReferenceType_Value_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Non_Nullable_ReferenceType_Value_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Reference_Type_Value_With_Null_Value_of_Nullable_Property_of_Reference_Type.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Reference_Type_Value_With_Null_Value_of_Nullable_Property_of_Nullable_Value_Type.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Nullable_Value_Type_Value_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Non_Nullable_Value_Type_Value_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Deserializing_Class_And_Interface_Property_Types_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_for_Interface_Instance_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_for_ReferenceType_Implementation_Instance_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_Json_InParent_Json_File_Test.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\Data\JsonFile1.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_Array_Of_ValueType_Items_Test.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_IEnumerable_Of_ValueType_Items_Test.json" />
@@ -388,19 +422,18 @@
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_IEnumerable_of_ReferenceType_Items_Test.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_IReadOnlyList_of_ReferenceType_Items_Test.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_List_of_ReferenceType_Items_Test.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\Data\JsonFile1_DELETE.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\Data\JsonFile1.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_Array_Of_ValueType_Items_Test.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_IEnumerable_Of_ValueType_Items_Test.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_IReadOnlyList_Of_ValueType_Items_Test.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_List_Of_ValueType_Items_Test.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\ExpectedResults\QueryListOfReferenceTypeValuesTestExpectedResult.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\ExpectedResults\QuerySingleReferenceTypeTestExpectedResult.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\ExpectedResults\QuerySingleValueTypeTestExpectedResult.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\ExpectedResults\QueryObjectsInParentJsonFileTestExpectedResult.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\ExpectedResults\QueryListOfValueTypeValuesTestExpectedResult.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\Data\JsonFile1.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\Data\JsonFile2.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\SuccessfulQueryResult\ExpectedResults\QueryListOfReferenceTypeValuesTestExpectedResult.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\SuccessfulQueryResult\ExpectedResults\QuerySingleReferenceTypeTestExpectedResult.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\SuccessfulQueryResult\ExpectedResults\QuerySingleValueTypeTestExpectedResult.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\SuccessfulQueryResult\ExpectedResults\QueryObjectsInParentJsonFileTestExpectedResult.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\SuccessfulQueryResult\ExpectedResults\QueryListOfValueTypeValuesTestExpectedResult.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\SuccessfulQueryResult\Data\JsonFile1.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\SuccessfulQueryResult\Data\JsonFile2.json" />
 		<EmbeddedResource Include="SharedJsonFiles\CompaniesAsArray.json" />
 		<EmbeddedResource Include="SharedJsonFiles\CompaniesAsArrayInJson.json" />
 		<EmbeddedResource Include="JsonMutators\StringInterpolation\BracesWithOperators\ExpectedCompiledJson.json" />
@@ -494,6 +527,9 @@
 	  <Folder Include="Errors\CompilerResult\" />
 	  <Folder Include="Errors\ResultAsParsedJsonValue\" />
 	  <Folder Include="Errors\ResultAsObject\" />
+	  <Folder Include="QueryManager\ResultAsObject\ErrorReporting\" />
+	  <Folder Include="QueryManager\ResultAsObject\NonNullableValuesNotSetErrors\" />
+	  <Folder Include="QueryManager\ResultAsParsedJsonValue\ErrorReporting\" />
 	</ItemGroup>
 
 	<ProjectExtensions>
