Added some unit tests

--- a/JsonQL.Tests/JsonQL.Tests.csproj
+++ b/JsonQL.Tests/JsonQL.Tests.csproj
@@ -168,6 +168,25 @@
 		<None Remove="Operators\TypeOfOperator\ExpectedCompiledJson.json" />
 		<None Remove="Operators\TypeOfOperator\JsonFile1.json" />
 		<None Remove="Operators\TypeOfOperator\JsonFile2.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\Data\ObjectsWithCollectionsOfCollectionsProperties.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Cannot_Create_Instance_of_Class.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Cannot_Create_Instance_of_Class_Error_Type_Reported_as_Warning.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Cannot_Create_Instance_of_Class_Error_Type_Turned_Off.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Property.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Property_Error_Type_Reported_as_Warning.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Property_Error_Type_Turned_Off.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Return_Value.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Return_Value_Error_Type_Reported_as_Warning.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Return_Value_Error_Type_Turned_Off.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Reference_Type_Property_Not_Set.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Reference_Type_Property_Not_Set_Error_Type_Reported_as_Warning.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Reference_Type_Property_Not_Set_Error_Type_Turned_Off.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Reference_Type_Value_Not_Set.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Reference_Type_Value_Not_Set_Error_Type_Reported_as_Warning.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Reference_Type_Value_Not_Set_Error_Type_Turned_Off.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Value_Type_Value_Not_Set.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Value_Type_Value_Not_Set_Error_Type_Reported_as_Warning.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Value_Type_Value_Not_Set_Error_Type_Turned_Off.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\CollectionsOfCollections.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile1.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile2.json" />
@@ -209,6 +228,11 @@
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Nullable_Value_Type_Value_Test.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Reference_Type_Value_With_Null_Value_of_Property_of_Nullable_Reference_Type_Test.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Reference_Type_Value_With_Null_Value_of_Property_of_Nullable_Value_Type_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\Data\CollectionsOfCollections.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\Data\JsonFile1.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Value_Type_Property_Not_Set.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Value_Type_Property_Not_Set_Error_Type_Reported_as_Warning.json" />
+		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Value_Type_Property_Not_Set_Error_Type_Turned_Off.json" />
 		<None Remove="QueryManager\ResultAsParsedJsonValue\JsonFile1.json" />
 		<None Remove="QueryManager\ResultAsParsedJsonValue\JsonFile2.json" />
 		<None Remove="QueryManager\ResultAsParsedJsonValue\QueryListOfReferenceTypeValuesTestExpectedResult.json" />
@@ -387,6 +411,25 @@
 		<EmbeddedResource Include="Operators\TypeOfOperator\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="Operators\TypeOfOperator\JsonFile1.json" />
 		<EmbeddedResource Include="Operators\TypeOfOperator\JsonFile2.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\Data\ObjectsWithCollectionsOfCollectionsProperties.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Cannot_Create_Instance_of_Class.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Value_Type_Value_Not_Set.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Reference_Type_Value_Not_Set.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Property.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Cannot_Create_Instance_of_Class_Error_Type_Reported_as_Warning.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Value_Type_Value_Not_Set_Error_Type_Reported_as_Warning.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Reference_Type_Value_Not_Set_Error_Type_Reported_as_Warning.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Cannot_Create_Instance_of_Class_Error_Type_Turned_Off.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Value_Type_Value_Not_Set_Error_Type_Turned_Off.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Reference_Type_Value_Not_Set_Error_Type_Turned_Off.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Return_Value.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Property_Error_Type_Reported_as_Warning.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Property_Error_Type_Turned_Off.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Reference_Type_Property_Not_Set.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Return_Value_Error_Type_Reported_as_Warning.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Reference_Type_Property_Not_Set_Error_Type_Reported_as_Warning.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Return_Value_Error_Type_Turned_Off.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Reference_Type_Property_Not_Set_Error_Type_Turned_Off.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile1.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\CollectionsOfCollections.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile2.json" />
@@ -427,6 +470,11 @@
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_IEnumerable_Of_ValueType_Items_Test.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_IReadOnlyList_Of_ValueType_Items_Test.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_List_Of_ValueType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\Data\CollectionsOfCollections.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\Data\JsonFile1.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Value_Type_Property_Not_Set_Error_Type_Reported_as_Warning.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Value_Type_Property_Not_Set_Error_Type_Turned_Off.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Value_Type_Property_Not_Set.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\SuccessfulQueryResult\ExpectedResults\QueryListOfReferenceTypeValuesTestExpectedResult.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\SuccessfulQueryResult\ExpectedResults\QuerySingleReferenceTypeTestExpectedResult.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\SuccessfulQueryResult\ExpectedResults\QuerySingleValueTypeTestExpectedResult.json" />
@@ -528,7 +576,6 @@
 	  <Folder Include="Errors\ResultAsParsedJsonValue\" />
 	  <Folder Include="Errors\ResultAsObject\" />
 	  <Folder Include="QueryManager\ResultAsObject\ErrorReporting\" />
-	  <Folder Include="QueryManager\ResultAsObject\NonNullableValuesNotSetErrors\" />
 	  <Folder Include="QueryManager\ResultAsParsedJsonValue\ErrorReporting\" />
 	</ItemGroup>
 
