Added some unit tests

--- a/JsonQL.Tests/JsonQL.Tests.csproj
+++ b/JsonQL.Tests/JsonQL.Tests.csproj
@@ -187,6 +187,13 @@
 		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Value_Type_Value_Not_Set.json" />
 		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Value_Type_Value_Not_Set_Error_Type_Reported_as_Warning.json" />
 		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Value_Type_Value_Not_Set_Error_Type_Turned_Off.json" />
+		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\Data\JsonFile.json" />
+		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\Data\JsonFile_TEMP.json" />
+		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\ConversionErrorTypeConfigurations.json" />
+		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\ConversionErrorTypeConfigurations_Error_Type_Reported_as_Warning.json" />
+		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\ConversionErrorTypeConfigurations_Error_Type_Turned_Off.json" />
+		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\FailOnFirstError_False.json" />
+		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\FailOnFirstError_True.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\CollectionsOfCollections.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile1.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile2.json" />
@@ -194,7 +201,6 @@
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Deserializing_Class_With_Both_Interface_And_Class_Properties_Test.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_For_Interface_Instance_Test.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_For_ReferenceType_Implementation_Instance_Test.json" />
-		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_Json_InParent_Json_File_Test - Copy.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_Json_InParent_Json_File_Test.json" />
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\Data\JsonFile1.json" />
 		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableReferenceItems\Data\JsonFile1.json" />
@@ -430,10 +436,16 @@
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Reference_Type_Property_Not_Set_Error_Type_Reported_as_Warning.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Return_Value_Error_Type_Turned_Off.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Reference_Type_Property_Not_Set_Error_Type_Turned_Off.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\Data\JsonFile_TEMP.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\Data\JsonFile.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\FailOnFirstError_False.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\ConversionErrorTypeConfigurations.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\FailOnFirstError_True.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\ConversionErrorTypeConfigurations_Error_Type_Reported_as_Warning.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\ConversionErrorTypeConfigurations_Error_Type_Turned_Off.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile1.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\CollectionsOfCollections.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile2.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Query_Json_InParent_Json_File_Test - Copy.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Collections_of_Collections_of_Collections_With_Third_Level_Items_Nullable_Test.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Collections_of_Collections_of_Collections_With_Second_Level_Items_Nullable_Test.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\SuccessfulQueryResults\ExpectedResults\Result_As_Collections_of_Collections_of_Collections_With_First_Level_Items_Nullable_Test.json" />
