--- a/JsonQL.Tests/JsonQL.Tests.csproj
+++ b/JsonQL.Tests/JsonQL.Tests.csproj
@@ -188,12 +188,15 @@
 		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Value_Type_Value_Not_Set_Error_Type_Reported_as_Warning.json" />
 		<None Remove="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Value_Type_Value_Not_Set_Error_Type_Turned_Off.json" />
 		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\Data\JsonFile.json" />
-		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\Data\JsonFile_TEMP.json" />
+		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\Data\JsonFile2.json" />
+		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\Data\JsonFile3.json" />
 		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\ConversionErrorTypeConfigurations.json" />
 		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\ConversionErrorTypeConfigurations_Error_Type_Reported_as_Warning.json" />
 		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\ConversionErrorTypeConfigurations_Error_Type_Turned_Off.json" />
 		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\FailOnFirstError_False.json" />
 		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\FailOnFirstError_True.json" />
+		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\JsonPropertyFormat_Properties_Initialized_From_CamelCase_Json.json" />
+		<None Remove="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\TryMapJsonConversionType.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\CollectionsOfCollections.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile1.json" />
 		<None Remove="QueryManager\ResultAsObject\SuccessfulQueryResults\Data\JsonFile2.json" />
@@ -436,8 +439,11 @@
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Reference_Type_Property_Not_Set_Error_Type_Reported_as_Warning.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Collection_Item_Value_Not_Set_In_Return_Value_Error_Type_Turned_Off.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\ConversionErrors\ExpectedResults\Non_Nullable_Reference_Type_Property_Not_Set_Error_Type_Turned_Off.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\Data\JsonFile_TEMP.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\Data\JsonFile3.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\Data\JsonFile2.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\Data\JsonFile.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\JsonPropertyFormat_Properties_Initialized_From_CamelCase_Json.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\TryMapJsonConversionType.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\FailOnFirstError_False.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\ConversionErrorTypeConfigurations.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\JsonConversionSettingsOverrides\ExpectedResults\FailOnFirstError_True.json" />
@@ -580,15 +586,6 @@
 		<EmbeddedResource Include="Functions\AggregateFunctions\Any\Companies.json">
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
 		</EmbeddedResource>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="CompilationResultCaching\" />
-	  <Folder Include="Errors\CompilerResult\" />
-	  <Folder Include="Errors\ResultAsParsedJsonValue\" />
-	  <Folder Include="Errors\ResultAsObject\" />
-	  <Folder Include="QueryManager\ResultAsObject\ErrorReporting\" />
-	  <Folder Include="QueryManager\ResultAsParsedJsonValue\ErrorReporting\" />
 	</ItemGroup>
 
 	<ProjectExtensions>
