Added some unit tests

--- a/JsonQL.Tests/JsonQL.Tests.csproj
+++ b/JsonQL.Tests/JsonQL.Tests.csproj
@@ -19,6 +19,12 @@
 		<None Remove="Functions\MathFunctions\IsOdd\JsonFile2.json" />
 		<None Remove="Functions\MathFunctions\JsonFile1.json" />
 		<None Remove="Functions\MathFunctions\JsonFile2.json" />
+		<None Remove="Functions\StringFunctions\Concatenate\ExpectedCompiledJson.json" />
+		<None Remove="Functions\StringFunctions\Concatenate\JsonFile1.json" />
+		<None Remove="Functions\StringFunctions\Upper\ExpectedCompiledJson.json" />
+		<None Remove="Functions\StringFunctions\Upper\JsonFile1.json" />
+		<None Remove="Functions\StringFunctions\Lower\ExpectedCompiledJson.json" />
+		<None Remove="Functions\StringFunctions\Lower\JsonFile1.json" />
 		<None Remove="JsonMutators\CopyFields\CopiedFieldsReplaceObjectFields\ExpectedCompiledJson.json" />
 		<None Remove="JsonMutators\CopyFields\CopyFieldsFromCurrentJson\ExpectedCompiledJson.json" />
 		<None Remove="JsonMutators\CopyFields\CopyFieldsFromParent\ExpectedCompiledJson.json" />
@@ -89,10 +95,10 @@
 		<None Remove="Functions\ConversionFunctions\ToInt\JsonFile1.json" />
 		<None Remove="Functions\ConversionFunctions\ToDouble\ExpectedCompiledJson.json" />
 		<None Remove="Functions\ConversionFunctions\ToDouble\JsonFile1.json" />
-		<None Remove="Functions\AssertHasValue\ExpectedCompiledJson.json" />
-		<None Remove="Functions\AssertHasValue\JsonFile1.json" />
-		<None Remove="Functions\TextLength\ExpectedCompiledJson.json" />
-		<None Remove="Functions\TextLength\JsonFile1.json" />
+		<None Remove="Operators\AssertHasValue\ExpectedCompiledJson.json" />
+		<None Remove="Operators\AssertHasValue\JsonFile1.json" />
+		<None Remove="Functions\StringFunctions\Len\ExpectedCompiledJson.json" />
+		<None Remove="Functions\StringFunctions\Len\JsonFile1.json" />
 		<None Remove="JsonValuePathElements\ArrayIndexers\ExpectedCompiledJson.json" />
 		<None Remove="JsonValuePathElements\ArrayIndexers\JsonFile1.json" />
 		<None Remove="JsonValuePathElements\ArrayIndexers\JsonFile2.json" />
@@ -292,6 +298,12 @@
 		<EmbeddedResource Include="Functions\MathFunctions\IsEven\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="Functions\MathFunctions\IsEven\JsonFile1.json" />
 		<EmbeddedResource Include="Functions\MathFunctions\IsEven\JsonFile2.json" />
+		<EmbeddedResource Include="Functions\StringFunctions\Concatenate\ExpectedCompiledJson.json" />
+		<EmbeddedResource Include="Functions\StringFunctions\Concatenate\JsonFile1.json" />
+		<EmbeddedResource Include="Functions\StringFunctions\Upper\ExpectedCompiledJson.json" />
+		<EmbeddedResource Include="Functions\StringFunctions\Upper\JsonFile1.json" />
+		<EmbeddedResource Include="Functions\StringFunctions\Lower\ExpectedCompiledJson.json" />
+		<EmbeddedResource Include="Functions\StringFunctions\Lower\JsonFile1.json" />
 		<EmbeddedResource Include="JsonMutators\CopyFields\CopiedFieldsReplaceObjectFields\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="JsonMutators\CopyFields\CopyFieldsFromCurrentJson\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="JsonMutators\CopyFields\CopyFieldsFromParent\ExpectedCompiledJson.json" />
@@ -347,10 +359,10 @@
 		<EmbeddedResource Include="Functions\ConversionFunctions\ToDouble\JsonFile1.json" />
 		<EmbeddedResource Include="Functions\ConversionFunctions\ToBoolean\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="Functions\ConversionFunctions\ToBoolean\JsonFile1.json" />
-		<EmbeddedResource Include="Functions\AssertHasValue\ExpectedCompiledJson.json" />
-		<EmbeddedResource Include="Functions\AssertHasValue\JsonFile1.json" />
-		<EmbeddedResource Include="Functions\TextLength\ExpectedCompiledJson.json" />
-		<EmbeddedResource Include="Functions\TextLength\JsonFile1.json" />
+		<EmbeddedResource Include="Operators\AssertHasValue\ExpectedCompiledJson.json" />
+		<EmbeddedResource Include="Operators\AssertHasValue\JsonFile1.json" />
+		<EmbeddedResource Include="Functions\StringFunctions\Len\ExpectedCompiledJson.json" />
+		<EmbeddedResource Include="Functions\StringFunctions\Len\JsonFile1.json" />
 		<EmbeddedResource Include="JsonValuePathElements\ArrayIndexers\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="JsonValuePathElements\ArrayIndexers\JsonFile1.json" />
 		<EmbeddedResource Include="JsonValuePathElements\ArrayIndexers\JsonFile2.json" />
