--- a/JsonQL.Diagnostics/JsonQL.Diagnostics.csproj
+++ b/JsonQL.Diagnostics/JsonQL.Diagnostics.csproj
@@ -9,8 +9,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<!--<PackageReference Include="OROptimizer.Shared.Log4Net" Version="1.0.0" />-->
-		<ProjectReference Include="..\..\OROptimizer.Shared.Log4Net\OROptimizer.Shared.Log4Net\OROptimizer.Shared.Log4Net.csproj" />
+		<PackageReference Include="OROptimizer.Shared.Log4Net" Version="1.0.0" />
+		<!--<ProjectReference Include="..\..\OROptimizer.Shared.Log4Net\OROptimizer.Shared.Log4Net\OROptimizer.Shared.Log4Net.csproj" />-->
 	</ItemGroup>
 
 	<ItemGroup>
