--- a/JsonQL/JsonQL.csproj
+++ b/JsonQL/JsonQL.csproj
@@ -9,11 +9,11 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-	  <!--<PackageReference Include="OROptimizer.Shared" Version="2.3.0" />-->
-	  <ProjectReference Include="..\..\OROptimizer.Shared\OROptimizer.Shared\OROptimizer.Shared.csproj" />
+	  <PackageReference Include="OROptimizer.Shared" Version="2.5.0" />
+	  <!--<ProjectReference Include="..\..\OROptimizer.Shared\OROptimizer.Shared\OROptimizer.Shared.csproj" />-->
 	  
-	  <!--<PackageReference Include="UniversalExpressionParser" Version="1.1.0" />-->
-	  <ProjectReference Include="..\..\UniversalExpressionParser\UniversalExpressionParser\UniversalExpressionParser.csproj" />
+	  <PackageReference Include="UniversalExpressionParser" Version="1.1.0" />
+	  <!--<ProjectReference Include="..\..\UniversalExpressionParser\UniversalExpressionParser\UniversalExpressionParser.csproj" />-->
 	</ItemGroup>
 
 </Project>
