--- a/JsonQL/JsonQL.csproj
+++ b/JsonQL/JsonQL.csproj
@@ -5,15 +5,56 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+
+		<PackageVersion>1.0.0-rc1</PackageVersion>
+		<Version>1.0.0-rc1</Version>
+		<PackageTags>Json Json+Query+Language Json+path</PackageTags>
+		<Authors>Artak Hakobyan</Authors>
+		<Company>OROptimizer</Company>
+		<Description>
+			JsonQL is a powerful JSON query language implementation that provides a flexible way to query and manipulate JSON data using a SQL-like syntax with rich function support.
+
+			## Features
+
+			- Rich set of built-in functions for JSON manipulation
+			- Support for aggregate functions (COUNT, AVG, MIN, MAX, SUM)
+			- Collection manipulation with ANY and ALL operations
+			- String operations (ToUpper, ToLower, Length, Concatenate, etc)
+			- Type conversion functions (DateTime, Date, Double, Int, Boolean, String)
+			- Mathematical operations (Abs, IsEven, IsOdd)
+			- Object property inspection (HasField)
+			- Lambda expression support for complex queries
+			- Extensible function architecture
+			- Built-in conversion of query results to C# objects
+			-Also, allows auto-binding interfaces to default implementations or non-default implementations via configuration
+			- Mutating JSON files by replacing Json field values by evaluated Json values
+			- Extending the API to provide custom operators, functions, as well as customizing any part of JsonQL implementation
+		</Description>
+		<Copyright>Copyright 2018 (c) OROptimizer. All rights reserved.</Copyright>
+		<PackageReleaseNotes>
+			Small fix to README.md
+		</PackageReleaseNotes>
+		<RepositoryUrl>https://github.com/artakhak/JsonQL</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/artakhak/JsonQL</PackageProjectUrl>
+		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Title>JsonQL</Title>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-	  <PackageReference Include="OROptimizer.Shared" Version="2.5.0" />
-	  <!--<ProjectReference Include="..\..\OROptimizer.Shared\OROptimizer.Shared\OROptimizer.Shared.csproj" />-->
-	  
-	  <PackageReference Include="UniversalExpressionParser" Version="1.1.0" />
-	  <!--<ProjectReference Include="..\..\UniversalExpressionParser\UniversalExpressionParser\UniversalExpressionParser.csproj" />-->
+	  <Content Remove="C:\Users\artak\.nuget\packages\oroptimizer.shared\2.5.0\contentFiles\any\netstandard2.0\README.md" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="OROptimizer.Shared" Version="2.5.0" />
+		<!--<ProjectReference Include="..\..\OROptimizer.Shared\OROptimizer.Shared\OROptimizer.Shared.csproj" />-->
+
+		<PackageReference Include="UniversalExpressionParser" Version="1.1.0" />
+		<!--<ProjectReference Include="..\..\UniversalExpressionParser\UniversalExpressionParser\UniversalExpressionParser.csproj" />-->
 	</ItemGroup>
 
 </Project>
